# finfortress

./: .env.example  .gitignore  CLAUDE.md  CLAUDE.original.md  Justfile  README.md  pyproject.toml
.github/workflows/: ai-implement.yml
.openhands/: config.toml
.streamlit/: config.toml
.zed/: settings.json
agent/: graph.py  profile.py  state.py
agent/nodes/: calculate.py  classify.py  fallback.py  fetch_live.py  generate.py  grade.py  profile_suggest.py  rerank.py  retrieve.py  rewrite.py
agent/prompts/: calculate.py  classify.py  generate.py  grade.py  profile_suggest.py  rewrite.py  strategy.py
agent/tools/: calculator.py  etf_prices.py  nbp_rates.py  obligacje_rates.py
api/: main.py  schemas.py
api/routes/: health.py  query.py  sources.py
app/: streamlit_app.py
app/pages/: strategy.py
data/: sources_manifest.json  user_profile.example.en.md  user_profile.example.md
data/my_sources/: blogs.example.json  pdfs.example.json  urls.example.json
docs/: api.md  architecture.md  bk2-overpayment-pl.md  bk2-overpayment.md  configuration.md  data-sources.md  evaluation.md  explainer.md  getting-started.md  implementation-notes.md  local-llm-setup.md
docs/decisions/: reranker-before-grader.md
ingest/: download_pdfs.py  embed_and_store.py  scrape_blogs.py
ingest/utils/: chunker.py  cleaner.py  embeddings.py  hasher.py  sparse_vectorizer.py
scripts/: backfill_sparse.py  check_url.py  graph.py  ingest_all.sh  ingest_local_pdfs.py  ingest_my_sources.py  setup_labels.sh  smoke_calculate.py  smoke_generate.py  smoke_grade.py  smoke_graph.py  smoke_rerank.py  smoke_retrieval.py  sources.py  status.py
